--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
 .App {
   text-align: center;
+  background-color: #1A1B1E;
+  color: whitesmoke;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
